--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-name: "whyareyouA5"
+name: "WhyareyouA-test"
 services:
   flask:
     build: flask
@@ -8,9 +8,31 @@ services:
       - ./flask:/flask_app
     env_file:
       - .env.dev
+    depends_on:
+      - db
     deploy:
       resources:
         limits:
           memory: 512M
         reservations:
           memory: 256M
+  db:
+    image: postgres:13-alpine
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      POSTGRES_USER: hello_flask
+      POSTGRES_PASSWORD: hello_flask
+      POSTGRES_DB: hello_flask_dev
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
+volumes:
+  # persistent volume on host at
+  # /var/lib/docker/postgres_data
+  postgres_data:
