--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -4,3 +4,6 @@ Werkzeug==2.2.2
 Flask-WTF==1.0.1
 email-validator==2.0.0
 bcrypt==4.1.2
+Flask-SQLAlchemy==3.0.3
+psycopg2-binary==2.9.9
+SQLAlchemy-serializer==1.4.1
