--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -9,6 +9,7 @@ psycopg2-binary==2.9.9
 SQLAlchemy-serializer==1.4.1
 Flask-Login==0.6.3
 segno==1.6.1
-
+Authlib==1.3.0
+requests==2.31.0
 pandas==2.2.2
 openpyxl==3.1.2
