--- a/flask/app/static/manifest.json
+++ b/flask/app/static/manifest.json
@@ -1,7 +1,8 @@
 {
     "name": "Stocking App",
     "short_name": "Stocking App",
-    "start_url": "/home",
+    "start_url": "/homepage",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
