--- a/flask/app/static/manifest.json
+++ b/flask/app/static/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Stocking App",
-    "short_name": "Stocking App",
-    "start_url": "/homepage",
+    "short_name": "SMS",
+    "start_url": "/",
     "scope": "/",
     "display": "standalone",
     "background_color": "#ffffff",
